# Qwen3-TTS-JP-mac

./: .gitignore  NOTICE  README.md  devbox.json  pyproject.toml  setup_mac.sh
examples/: test_model_12hz_base.py  test_model_12hz_custom_voice.py  test_model_12hz_voice_design.py  test_tokenizer_12hz.py
finetuning/: prepare_data.py  sft_12hz.py
qwen_tts/cli/: demo.py
qwen_tts/core/models/: modeling_qwen3_tts.py
qwen_tts/core/tokenizer_25hz/vq/: speech_vq.py
qwen_tts/inference/: qwen3_tts_model.py
qwen_tts/utils/: __init__.py  device.py
scripts/: dev_demo.py
